# qutebrowser

./: .gitignore  make_dmg.py  pyproject.toml
doc/help/: commands.asciidoc
qutebrowser/components/: cursorcommands.py  wincommands.py
scripts/dev/: Makefile-dmg  build_release.py
